--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
     "classnames": "^2.3.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-spinners": "^0.11.0",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:3000",
